tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_unused_items_does_not_consider_struct_as_constructed_if_mentioned_in_function_argument/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: struct `Bar` is never constructed
  ┌─ src/main.nr:2:12
  │
2 │     struct Bar {}
  │            --- struct is never constructed
  │

error: Function expects 1 parameter but 0 were given
  ┌─ src/main.nr:7:9
  │
7 │         foo();
  │         -----
  │

Aborting due to 1 previous error
